# nodemcu-firmware

./: .cproject  .editorconfig  .gdbinit  .gdbinitlua  .gitignore  .gitmodules  .project  .readthedocs.yaml  .travis.yml  API.html  API.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  Makefile.esp32  Makefile.esp8266  Makefile.linux  Makefile.macosx  Makefile.openthings  README.html  README.md  README1.md  README_cn.md  build_linux.sh  build_linux.sh~  build_nmcu.sh  build_nmcu.sh~  embed_lfs.sh  fullmake.sh  install.sh  merge.sh  merge.sh~  mkdocs.yml  mkdocs.yml~  nodemcu_api_cn.html  nodemcu_api_cn.md  nodemcu_api_en.html  nodemcu_api_en.md  (+4 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
app/: .cproject  .gitignore  .project  Makefile  flash.bat  flash.sh  gen_misc.bat  gen_misc.sh  gen_misc_plus.bat  gen_misc_plus.sh  mapfile
components/base_nodemcu/: CMakeLists.txt  Kconfig  Makefile.projbuild  add_rodata_ld.sh  c_stdlib.c  component.mk  ip_fmt.c  lextra.c  linit.c  lnodeaux.c  nodemcu.lf  uart.c  user_main.c
components/base_nodemcu/include/: c_stdlib.h  ip_fmt.h  lextra.h  lnodeaux.h  module.h  nodemcu_esp_event.h
components/base_nodemcu/ld/: nodemcu_core.ld  nodemcu_core_lfs.ld  nodemcu_rodata.ld  nodemcu_rodata_lfs.ld
components/embedded_lfs/: CMakeLists.txt  component.mk  embedded_lfs.lf
components/lua/: CMakeLists.txt  Kconfig  Makefile.projbuild  compiler.h  component.mk  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  ldblib.c  ldebug.c  ldo.c  legc.c  lflash.c  lfunc.c  lgc.c  link_lua.lf  liolib.c  llex.c  llimits.h  lmathlib.c  loadlib.c  lobject.c  lobject.h  lopcodes.c  lparser.c  lrodefs.h  lrotable.c  lrotable.h  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltablib.c  lua.c  lua.h  luaconf.h  lualib.h  (+4 more)
components/lua/common/: lfs.c  lfs.h  linit.c  linput.c  linput.h  lnodeaux.c  lnodeaux.h  lpanic.c  lpanic.h
components/lua/lua-5.1/: lauxlib.c  lauxlib.h  lbaselib.c  ldblib.c  ldebug.h  ldump.c  lflash.c  lfunc.c  lfunc.h  liolib.c  llex.c  lmathlib.c  lmem.c  lnodemcu.c  lnodemcu.h  loadlib.c  lobject.c  lobject.h  lstate.c  ltable.c  ltable.h  lua.c  lua.h  luaconf.h  lundump.c  lvm.h  lzio.c
components/lua/lua-5.1/host/: idf.mk  lflashimg.c  loslib.c  luac.c
components/lua/lua-5.3/: Makefile  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  ldebug.c  ldump.c  llex.h  lnodemcu.c  lnodemcu.h  loadlib.c  lobject.c  lobject.h  lrotable.h  lstate.c  ltable.h  ltm.c  lua.c  lua.h  luaconf.h  lundump.c  lundump.h
components/lua/lua-5.3/host/: idf.mk  luac.c
components/lua/luac_cross/: lflashimg.c  loslib.c  luac.c
components/luac_cross/: CMakeLists.txt  Makefile  component.mk  lflashimg.c  liolib.c  loslib.c  luac.c  print.c
components/modules/: CMakeLists.txt  Kconfig  adc.c  am2320.c  bh1750.c  bit.c  ble.c  bthci.c  can.c  common.c  common.h  component.mk  crypto.c  dac.c  dht.c  dimmer.c  encoder.c  eromfs.c  eromfs.py  espnow.c  eth.c  file.c  gpio.c  heaptrace.c  http.c  httpd.c  htu21.c  i2c.c  i2c_common.h  i2c_hw_master.c  i2c_hw_slave.c  i2s.c  idf_component.yml  ledc.c  matrix.c  mqtt.c  net.c  node.c  ota.c  ota_common.h  (+35 more)
components/modules-esp32/: CMakeLists.txt  Kconfig  can.c  dac.c  i2s.c  sdmmc.c  touch.c
components/platform/: CMakeLists.txt  Kconfig  bh1750.c  component.mk  dht.c  flash_api.c  flash_fs.c  htu21.c  onewire.c  partitions-2MB.csv  partitions.csv  platform.c  platform_flash.c  platform_partition.c  platform_rmt.c  project_include.cmake  rmt.c  u8x8_nodemcu_hal.c  ucg_nodemcu_hal.c  vfs.c  wdt.c  ws2812.c
components/platform/include/: cpu_esp32.h  flash_api.h  flash_fs.h  platform.h  platform_rmt.h  platform_wdt.h  u8x8_nodemcu_hal.h  user_version.h  vfs.h  vfs_int.h
components/u8g2/: CMakeLists.txt  Kconfig.u8g2  component.mk  project_include.cmake  u8g2.kconfig  u8x8_d_fbrle.c
components/ucg/: CMakeLists.txt  Kconfig.ucg  component.mk  project_include.cmake  ucg.kconfig
docs/: build.md  compiling.md  debug.md  extn-developer-faq.md  flash.md  getting-started.md  hardware-faq.md  index.md  lcd.md  lfs.md  lua-developer-faq.md  lua53.md  modules.md  nodemcu-lrm.md  nodemcu-pil.md  requirements.txt  sdcard.md  spiffs.md  support.md  upload.md
examples/: ds18b20.lua  fragment.lua  httptest.lua  init.lua  telnet.lua  user.lua
extcomp-template/: CMakeLists.txt  Kconfig  mymod.c
include/: at_custom.h  c_types.h  eagle_soc.h  espconn.h  ets_sys.h  mem.h  osapi.h  spi_flash.h  user_interface.h
ld/: defsym.rom  eagle.app.v6.app1.ld  eagle.app.v6.app2.ld  eagle.app.v6.ld  eagle.rom.addr.v6.ld  extrasyms.rom  nodemcu.ld  nodemcu32.ld
lua examples/: telnet2.lua
lua modules/: bmp085.lua
lua_compat/: spi_compat.lua  ws2812_compat.lua
lua_examples/: adc_rgb.lua  dht-module-test.lua  gossip_example.lua  graphics_test.lua  http-client.lua  http_server  http_server.lua  httptest.lua  init.lua  irsend.lua  make_phone_call.lua  mqtt_test.lua  myfile.lua  net_send_queue.lua  onewire-ds18b20.lua  pipeutils.lua  select-decimals-ds18b20.lua  send_text_message.lua  sjson-streaming.lua  softuart.lua  somfy.lua  tcp2uart.lua  telnet.lua  u8g_bitmaps.lua  u8g_rotation.lua  webap_toggle_pin.lua  websocket.lua  yet-another-bmp085.lua  yet-another-dht22.lua  yet-another-ds18b20.lua
lua_modules/: bh1705_EN.md
lua_tests/: file-test.expect  mispec.lua  mispec_file.lua  mispec_ws2812.lua  mispec_ws2812_2.lua  mispec_ws2812_effects.lua  tap-driver.expect  tls-test.expect
modules/: 18b20.lua  bmp085.lua  ds18b20.CN.md  ds18b20.EN.md  ds18b20.lua
msvc/: .gitignore  README.md  hosttools.sln
pre_build/: README.md
sdk/: License  Makefile  release_note.txt
tests/: .gitattributes  HardwareTestHarness.md  NTest_adc_env.lua  NTest_file.lua  NTest_file_lfs.lua  NTest_gpio_env.lua  NTest_lcd_i2c4bit.lua  NTest_lua.lua  NTest_pixbuf.lua  NTest_tmr.lua  NTest_ws2812.lua  NTest_ws2812_effects.lua  NodeMCU_Test_Environment.md  NodeMCU_Test_Environment.rst  README.md  all.sh  preflight-dut.lua  preflight-host-ip.expect  preflight-lfs.sh  preflight-tls.sh  tap-driver.expect  (+3 more)
(+1469 files in other folders)
