idf_component_register(
  SRCS
    "dht.c"
    "onewire.c"
    "platform.c"
    "platform_flash.c"
    "platform_partition.c"
    "platform_rmt.c"
    "u8x8_nodemcu_hal.c"
    "ucg_nodemcu_hal.c"
    "wdt.c"
    "ws2812.c"
  INCLUDE_DIRS "include"
  REQUIRES
    "driver"
    "driver_i2c"
    "spi_flash"
    "spiffs"
    "task"
    "u8g2"
    "ucg"
  PRIV_REQUIRES
    "bootloader_support"
    "esp_rom"
    "lua"
    "soc"
)
